remove IssueReviewerService and move methods to IssueCollaboratorService